# babelchef-live-translator

./: .env.example  .gitignore  Dockerfile  README.md  deploy.sh  pyproject.toml  start.sh  test_gemini.py  test_livekit.js
app/: __init__.py  cooking_tools.py  main.py  room_manager.py  worker.py
app/agents/: __init__.py  translator_agent.py
app/static/: index.html
app/static/css/: style.css
app/static/js/: app.js  audio-processor.js  pcm-capture-processor.js
docs/: demo_video_script.md  devpost_description.md  veo_video_prompts.md
